# fairy

./: .gitignore  Dockerfile  Pipfile  README.md  azure-pipelines.yml  entrypoint.py  entrypoint.sh  freeze.py  libman.json  manage.py  pyproject.toml
fairy/: settings.py  settings_prod.py  urls.py  utils.py  wsgi.py
fairy/template/: backends.py  utils.py
posts/: admin.py  models.py  urls.py  utils.py  views.py
posts/jinja2/posts/: base.jinja2  index.jinja2  post.jinja2
posts/jinja2/posts/_partial/: footer.jinja2  header.jinja2  meta.jinja2  sidebar.jinja2
posts/migrations/: 0001_initial.py  0002_friend.py
posts/static/: style.css
posts/templates/posts/: base.html  index.html  post.html
posts/templates/posts/snippets/: comment.html
