[tool.poetry]
name = "fairy"
version = "0.1.0"
description = "fairy"
authors = ["zengxs <i@zengxs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
django = "~2.2"
bcrypt = "~3.1"
jinja2 = "~2.10"
bleach = "~3.1"
mistletoe = "~0.7"
pygments = "~2.4"
gunicorn = "~19.9"
psycopg2-binary = "~2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = {version = "^19.3b0",allows-prereleases = true}
flake8 = "^3.7"
coverage = "^4.5"
tomlkit = "^0.5.3"

[tool.black]
line-length = 120
skip-string-normalization = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

